# s3-metadata-tagger-lib

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  object_tagger.py  pyproject.toml  requirements.txt  setup.cfg  sonar-project.properties  trivy.yaml
.github/: dependabot.yml
.github/workflows/: check.yml  deploy.yml
dataset_metadata_extractor/: dataset_metadata_extractor.py  test_dataset_metadata_extractor.py
dataset_metadata_extractor/resources/test/: test.xlsx
examples/serverless-triggered/: handler.py  package-lock.json  package.json  requirements.txt  serverless.yml
metadata_tagger/dataset_metadata_extractor/: test_dataset_metadata_extractor.py
metadata_tagger/pdf_metadata_extractor/: test_pdf_metadata_extractor.py
metadata_tagger/picture_metadata_extractor/: test_picture_metadata_extractor.py
pdf_metadata_extractor/: test_pdf_metadata_extractor.py
picture_metadata_extractor/: test_picture_metadata_extractor.py
picture_metadata_extractor/resources/test/: test.jp2
src/metadata_tagger/: object_tagger.py
tests/: test_dataset_metadata_extractor.py  test_object_tagger.py  test_pdf_metadata_extractor.py  test_picture_metadata_extractor.py
