[metadata]
name = metadata-tagger
version = 0.0.1

[options]
install_requires =
    autopep8
    awscrt
    boto3
    boto3-stubs
    botocore
    botocore-stubs
    certifi
    chardet
    jmespath
    lxml
    mypy-boto3-s3
    Pillow
    pycodestyle
    PyPDF2
    python-dateutil
    python-magic
    s3transfer
    six
    toml
    types-chardet
    types-lxml
    types-Pillow
    typing_extensions
    urllib3